bindings/c/include/safe_currency.h


typedef enum CurrencyStatus {
    CURRENCY_OK = 0,
    CURRENCY_ERR_NULL_POINTER = -1,
    CURRENCY_ERR_INVALID_CODE = -2,
    CURRENCY_ERR_CURRENCY_MISMATCH = -3,
    CURRENCY_ERR_OVERFLOW = -4,
    CURRENCY_ERR_UNDERFLOW = -5,
    CURRENCY_ERR_DIVISION_BY_ZERO = -6,
    CURRENCY_ERR_BUFFER_TOO_SMALL = -7,
    CURRENCY_ERR_PARSE_FAILED = -8
} CurrencyStatus;
typedef enum CurrencyCode {
    CURRENCY_USD = 0,   
    CURRENCY_EUR,       
    CURRENCY_GBP,       
    CURRENCY_JPY,       
    CURRENCY_CHF,       
    CURRENCY_CAD,       
    CURRENCY_AUD,       
    CURRENCY_NZD,       
    CURRENCY_CNY,       
    CURRENCY_INR,       
    CURRENCY_BRL,       
    CURRENCY_MXN,       
    CURRENCY_ARS,       
    CURRENCY_CLP,       
    CURRENCY_COP,       
    CURRENCY_PEN,       
    CURRENCY_KRW,       
    CURRENCY_SGD,       
    CURRENCY_HKD,       
    CURRENCY_THB,       
    CURRENCY_MYR,       
    CURRENCY_IDR,       
    CURRENCY_PHP,       
    CURRENCY_VND,       
    CURRENCY_SEK,       
    CURRENCY_NOK,       
    CURRENCY_DKK,       
    CURRENCY_PLN,       
    CURRENCY_CZK,       
    CURRENCY_HUF,       
    CURRENCY_RON,       
    CURRENCY_BGN,       
    CURRENCY_HRK,       
    CURRENCY_ISK,       
    CURRENCY_RUB,       
    CURRENCY_ZAR,       
    CURRENCY_TRY,       
    CURRENCY_AED,       
    CURRENCY_SAR,       
    CURRENCY_ILS,       
    CURRENCY_BTC,       
    CURRENCY_ETH,       
    CURRENCY_COUNT,     
    CURRENCY_UNKNOWN = -1 
} CurrencyCode;
typedef struct Money {
    int64_t minor_units;        
    CurrencyCode currency;      
} Money;
typedef struct MoneyResult {
    CurrencyStatus status;
    Money value;
} MoneyResult;
typedef struct CurrencyCodeResult {
    CurrencyStatus status;
    CurrencyCode code;
} CurrencyCodeResult;
CurrencyCodeResult currency_parse_code(const char* str, size_t len);
bool currency_is_valid_code(const char* str, size_t len);
uint8_t currency_get_decimals(CurrencyCode code);
const char* currency_get_symbol(CurrencyCode code);
const char* currency_get_name(CurrencyCode code);
Money money_from_major(int64_t amount, CurrencyCode currency);
Money money_from_minor(int64_t amount, CurrencyCode currency);
Money money_zero(CurrencyCode currency);
MoneyResult money_add(Money a, Money b);
MoneyResult money_sub(Money a, Money b);
MoneyResult money_mul(Money m, int64_t scalar);
MoneyResult money_div(Money m, int64_t divisor);
int64_t money_get_major(Money m);
int64_t money_get_minor(Money m);
bool money_is_zero(Money m);
bool money_is_positive(Money m);
bool money_is_negative(Money m);
CurrencyStatus money_format(Money m, char* buf, size_t buf_size);