bindings/ada/src/proven-ffi.ads


   function Math_Pow_Checked (Base : long; Exp : unsigned) return Int_Result;
   pragma Import (C, Math_Pow_Checked, "proven_math_pow_checked");

   function Math_Abs_Safe (N : long) return Int_Result;
   pragma Import (C, Math_Abs_Safe, "proven_math_abs_safe");

   function Math_Clamp (Lo, Hi, Value : long) return long;
   pragma Import (C, Math_Clamp, "proven_math_clamp");

   ---------------------------------------------------------------------------
   --  SafeString
   ---------------------------------------------------------------------------

   function String_Is_Valid_UTF8
     (Ptr : access unsigned_char; Len : size_t) return Bool_Result;
   pragma Import (C, String_Is_Valid_UTF8, "proven_string_is_valid_utf8");

   function String_Escape_SQL
     (Ptr : access unsigned_char; Len : size_t) return String_Result;
   pragma Import (C, String_Escape_SQL, "proven_string_escape_sql");

   function String_Escape_HTML
     (Ptr : access unsigned_char; Len : size_t) return String_Result;
   pragma Import (C, String_Escape_HTML, "proven_string_escape_html");

   function String_Escape_JS
     (Ptr : access unsigned_char; Len : size_t) return String_Result;
   pragma Import (C, String_Escape_JS, "proven_string_escape_js");

   ---------------------------------------------------------------------------
   --  SafePath
   ---------------------------------------------------------------------------

   function Path_Has_Traversal
     (Ptr : access unsigned_char; Len : size_t) return Bool_Result;
   pragma Import (C, Path_Has_Traversal, "proven_path_has_traversal");

   function Path_Sanitize_Filename
     (Ptr : access unsigned_char; Len : size_t) return String_Result;
   pragma Import (C, Path_Sanitize_Filename, "proven_path_sanitize_filename");

   ---------------------------------------------------------------------------
   --  SafeEmail
   ---------------------------------------------------------------------------

   function Email_Is_Valid
     (Ptr : access unsigned_char; Len : size_t) return Bool_Result;
   pragma Import (C, Email_Is_Valid, "proven_email_is_valid");

   ---------------------------------------------------------------------------
   --  SafeNetwork
   ---------------------------------------------------------------------------

   function Network_Parse_IPv4
     (Ptr : access unsigned_char; Len : size_t) return IPv4_Result;
   pragma Import (C, Network_Parse_IPv4, "proven_network_parse_ipv4");

   function Network_IPv4_Is_Private (Addr : IPv4_Address) return C_bool;
   pragma Import (C, Network_IPv4_Is_Private, "proven_network_ipv4_is_private");

   function Network_IPv4_Is_Loopback (Addr : IPv4_Address) return C_bool;
   pragma Import (C, Network_IPv4_Is_Loopback,
                  "proven_network_ipv4_is_loopback");

   ---------------------------------------------------------------------------
   --  SafeCrypto
   ---------------------------------------------------------------------------

   function Crypto_Constant_Time_Eq
     (Ptr1 : access unsigned_char; Len1 : size_t;
      Ptr2 : access unsigned_char; Len2 : size_t) return Bool_Result;
   pragma Import (C, Crypto_Constant_Time_Eq,
                  "proven_crypto_constant_time_eq");

   function Crypto_Random_Bytes
     (Ptr : access unsigned_char; Len : size_t) return int;
   pragma Import (C, Crypto_Random_Bytes, "proven_crypto_random_bytes");

   ---------------------------------------------------------------------------
   --  SafeFloat
   ---------------------------------------------------------------------------

   function Float_Div (A, B : double) return Float_Result;
   pragma Import (C, Float_Div, "proven_float_div");

   function Float_Sqrt (X : double) return Float_Result;
   pragma Import (C, Float_Sqrt, "proven_float_sqrt");

   function Float_Ln (X : double) return Float_Result;
   pragma Import (C, Float_Ln, "proven_float_ln");

   function Float_Is_Finite (X : double) return C_bool;
   pragma Import (C, Float_Is_Finite, "proven_float_is_finite");

   function Float_Is_NaN (X : double) return C_bool;
   pragma Import (C, Float_Is_NaN, "proven_float_is_nan");

   ---------------------------------------------------------------------------
   --  SafeUrl
   ---------------------------------------------------------------------------

   function Url_Parse
     (Ptr : access unsigned_char; Len : size_t) return Url_Result;
   pragma Import (C, Url_Parse, "proven_url_parse");

   ---------------------------------------------------------------------------
   --  SafeJson
   ---------------------------------------------------------------------------

   function Json_Is_Valid
     (Ptr : access unsigned_char; Len : size_t) return Bool_Result;
   pragma Import (C, Json_Is_Valid, "proven_json_is_valid");

   function Json_Get_Type
     (Ptr : access unsigned_char; Len : size_t) return int;
   pragma Import (C, Json_Get_Type, "proven_json_get_type");

   ---------------------------------------------------------------------------
   --  SafeDateTime
   ---------------------------------------------------------------------------

   function Datetime_Parse
     (Ptr : access unsigned_char; Len : size_t) return DateTime_Result;
   pragma Import (C, Datetime_Parse, "proven_datetime_parse");

   function Datetime_Format_ISO8601
     (DT : C_DateTime) return String_Result;
   pragma Import (C, Datetime_Format_ISO8601,
                  "proven_datetime_format_iso8601");

   function Datetime_Is_Leap_Year (Year : int) return C_bool;
   pragma Import (C, Datetime_Is_Leap_Year, "proven_datetime_is_leap_year");

   function Datetime_Days_In_Month
     (Year : int; Month : unsigned_char) return unsigned_char;
   pragma Import (C, Datetime_Days_In_Month, "proven_datetime_days_in_month");

   ---------------------------------------------------------------------------
   --  SafeVersion
   ---------------------------------------------------------------------------

   function Version_Parse
     (Ptr : access unsigned_char; Len : size_t) return Version_Result;
   pragma Import (C, Version_Parse, "proven_version_parse");

   function Version_Compare
     (A, B : C_Semantic_Version) return int;
   pragma Import (C, Version_Compare, "proven_version_compare");

   ---------------------------------------------------------------------------
   --  SafeUUID
   ---------------------------------------------------------------------------

   function UUID_V4_Generate (UUID : access C_Uuid) return int;
   pragma Import (C, UUID_V4_Generate, "uuid_v4_generate");

   function UUID_Parse
     (Str : chars_ptr; Len : size_t; UUID : access C_Uuid) return int;
   pragma Import (C, UUID_Parse, "uuid_parse");

   function UUID_To_String
     (UUID : access constant C_Uuid; Buf : chars_ptr;
      Buf_Size : size_t) return int;
   pragma Import (C, UUID_To_String, "uuid_to_string");

   function UUID_To_URN
     (UUID : access constant C_Uuid; Buf : chars_ptr;
      Buf_Size : size_t) return int;
   pragma Import (C, UUID_To_URN, "uuid_to_urn");

   function UUID_Is_Nil (UUID : access constant C_Uuid) return C_bool;
   pragma Import (C, UUID_Is_Nil, "uuid_is_nil");

   function UUID_Equals
     (A, B : access constant C_Uuid) return C_bool;
   pragma Import (C, UUID_Equals, "uuid_equals");

   function UUID_Is_Valid (Str : chars_ptr; Len : size_t) return C_bool;
   pragma Import (C, UUID_Is_Valid, "uuid_is_valid");

   ---------------------------------------------------------------------------
   --  SafeHex
   ---------------------------------------------------------------------------

   function Hex_Encode
     (Bytes     : access unsigned_char; Bytes_Len : size_t;
      Hex       : chars_ptr;            Hex_Size  : size_t)
      return Hex_Encode_Result;
   pragma Import (C, Hex_Encode, "hex_encode");

   function Hex_Decode
     (Hex       : chars_ptr;            Hex_Len    : size_t;
      Bytes     : access unsigned_char; Bytes_Size : size_t)
      return Hex_Decode_Result;
   pragma Import (C, Hex_Decode, "hex_decode");

   function Hex_Is_Valid (Str : chars_ptr; Len : size_t) return C_bool;
   pragma Import (C, Hex_Is_Valid, "hex_is_valid");

   function Hex_Is_Valid_Bytes (Str : chars_ptr; Len : size_t) return C_bool;
   pragma Import (C, Hex_Is_Valid_Bytes, "hex_is_valid_bytes");

   function Hex_Constant_Time_Eq
     (A : chars_ptr; A_Len : size_t;
      B : chars_ptr; B_Len : size_t) return C_bool;
   pragma Import (C, Hex_Constant_Time_Eq, "hex_constant_time_eq");

   function Hex_To_Int (Hex : chars_ptr; Len : size_t) return Hex_Int_Result;
   pragma Import (C, Hex_To_Int, "hex_to_int");

   ---------------------------------------------------------------------------
   --  SafeCurrency
   ---------------------------------------------------------------------------

   function Currency_Parse_Code
     (Str : chars_ptr; Len : size_t) return Currency_Code_Result;
   pragma Import (C, Currency_Parse_Code, "currency_parse_code");

   function Currency_Is_Valid_Code
     (Str : chars_ptr; Len : size_t) return C_bool;
   pragma Import (C, Currency_Is_Valid_Code, "currency_is_valid_code");

   function Currency_Get_Decimals (Code : int) return unsigned_char;
   pragma Import (C, Currency_Get_Decimals, "currency_get_decimals");

   function Currency_Get_Symbol (Code : int) return chars_ptr;
   pragma Import (C, Currency_Get_Symbol, "currency_get_symbol");

   function Currency_Get_Name (Code : int) return chars_ptr;
   pragma Import (C, Currency_Get_Name, "currency_get_name");

   function C_Money_From_Major
     (Amount : long; Currency : int) return C_Money;
   pragma Import (C, C_Money_From_Major, "money_from_major");

   function C_Money_From_Minor
     (Amount : long; Currency : int) return C_Money;
   pragma Import (C, C_Money_From_Minor, "money_from_minor");

   function C_Money_Zero (Currency : int) return C_Money;
   pragma Import (C, C_Money_Zero, "money_zero");

   function C_Money_Add (A, B : C_Money) return Money_Result;
   pragma Import (C, C_Money_Add, "money_add");

   function C_Money_Sub (A, B : C_Money) return Money_Result;
   pragma Import (C, C_Money_Sub, "money_sub");

   function C_Money_Mul (M : C_Money; Scalar : long) return Money_Result;
   pragma Import (C, C_Money_Mul, "money_mul");

   function C_Money_Div (M : C_Money; Divisor : long) return Money_Result;
   pragma Import (C, C_Money_Div, "money_div");

   function C_Money_Is_Zero (M : C_Money) return C_bool;
   pragma Import (C, C_Money_Is_Zero, "money_is_zero");

   function C_Money_Is_Positive (M : C_Money) return C_bool;
   pragma Import (C, C_Money_Is_Positive, "money_is_positive");

   function C_Money_Is_Negative (M : C_Money) return C_bool;
   pragma Import (C, C_Money_Is_Negative, "money_is_negative");

   function C_Money_Get_Major (M : C_Money) return long;
   pragma Import (C, C_Money_Get_Major, "money_get_major");

   function C_Money_Get_Minor (M : C_Money) return long;
   pragma Import (C, C_Money_Get_Minor, "money_get_minor");

   function C_Money_Format
     (M : C_Money; Buf : chars_ptr; Buf_Size : size_t) return int;
   pragma Import (C, C_Money_Format, "money_format");

   ---------------------------------------------------------------------------
   --  SafePhone
   ---------------------------------------------------------------------------

   function Phone_Parse
     (Str : chars_ptr; Len : size_t) return Phone_Result;
   pragma Import (C, Phone_Parse, "phone_parse");

   function Phone_Is_Valid
     (Str : chars_ptr; Len : size_t) return C_bool;
   pragma Import (C, Phone_Is_Valid, "phone_is_valid");

   function Phone_Format_E164
     (Number : access constant C_Phone_Number; Buf : chars_ptr;
      Buf_Size : size_t) return int;
   pragma Import (C, Phone_Format_E164, "phone_format_e164");

   function Phone_Format_International
     (Number : access constant C_Phone_Number; Buf : chars_ptr;
      Buf_Size : size_t) return int;
   pragma Import (C, Phone_Format_International, "phone_format_international");
